Project created and services written

--- a/src/app/Task/todo-task/todo-task.component.css
+++ b/src/app/Task/todo-task/todo-task.component.css
@@ -1,9 +1,28 @@
+.container {
+  height: 100vh;
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  height: 10vh;
+  padding-left: 50px;
+}
+
+.task-container {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .example-container {
+
   width: 400px;
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
   vertical-align: top;
+
 }
 
 .example-list {
@@ -19,10 +38,10 @@
   padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; */
   box-sizing: border-box;
   cursor: move;
   background: white;
