--- a/src/app/components/user-registation/user-registation.component.html
+++ b/src/app/components/user-registation/user-registation.component.html
@@ -5,9 +5,9 @@
 <mat-card>
   <mat-card-header>
     <div  class="example-header-image"></div>
-    <mat-card-title>User Registation</mat-card-title>
+    <mat-card-title>Registation</mat-card-title>
   </mat-card-header>
-<form [formGroup]="myForm" novalidate>
+<form [formGroup]="myForm" >
   <!-- Name -->
   <div>
   <mat-form-field class="example-full-width">
@@ -48,7 +48,7 @@
 
   <!-- Submit -->
   <div class="button-wrapper">
-    <button mat-flat-button [disabled]="myForm.valid"  (click)="submitForm()"  color="primary">Submit</button>
+    <button mat-flat-button [disabled]="!myForm.valid"  (click)="submitForm()"  color="primary">Submit</button>
     <button style="padding-left: 40px;" (click)="registeredUser()" mat-button type="button" [disableRipple]= "true" color="primary">Already Registered User.</button>
   </div>
 </form>
