--- a/src/app/components/todo-task/todo-task.component.html
+++ b/src/app/components/todo-task/todo-task.component.html
@@ -13,26 +13,28 @@
       cdkDropList
       #todoList="cdkDropList"
       [cdkDropListData]="todo"
-      [cdkDropListConnectedTo]="[doneList]"
+      [cdkDropListConnectedTo]="[inProgressList]"
       class="example-list"
       (cdkDropListDropped)="drop($event)">
       <div class="example-box" *ngFor="let item of todo" cdkDrag>
-        <p>Title</p>
-        <p>Description</p>
+        <p>{{item.title}}</p>
+        <p>{{item.description}}</p>
       </div>
     </div>
   </div>
   <div class="example-container">
     <h2>In progress</h2>
-
     <div
       cdkDropList
-      #todoList="cdkDropList"
-      [cdkDropListData]="todo"
-      [cdkDropListConnectedTo]="[doneList]"
+      #inProgressList="cdkDropList"
+      [cdkDropListData]="inprogress"
+      [cdkDropListConnectedTo]="[todoList,doneList]"
       class="example-list"
       (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+      <div class="example-box" *ngFor="let item of inprogress" cdkDrag>
+        <p>{{item?.title}}</p>
+        <p>{{item?.description}}</p>
+      </div>
     </div>
   </div>
 
@@ -43,10 +45,13 @@
       cdkDropList
       #doneList="cdkDropList"
       [cdkDropListData]="done"
-      [cdkDropListConnectedTo]="[todoList]"
+      [cdkDropListConnectedTo]="[inProgressList]"
       class="example-list"
       (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+      <div class="example-box" *ngFor="let item of done" cdkDrag>
+        <p>{{item?.title}}</p>
+        <p>{{item?.description}}</p>
+      </div>
     </div>
   </div>
 
