--- a/src/app/components/todo-task/todo-task.component.html
+++ b/src/app/components/todo-task/todo-task.component.html
@@ -1,60 +1,63 @@
 
 <div class="container">
-  <div class="btn">
-
-    <button mat-raised-button (click)="openDialog()">Create task</button>
-  </div>
-
-
-<div class="task-container">
-  <div class="example-container">
-    <h2>To do</h2>
-    <div
-      cdkDropList
-      #todoList="cdkDropList"
-      [cdkDropListData]="todo"
-      [cdkDropListConnectedTo]="[inProgressList]"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of todo" cdkDrag>
-        <p>{{item.title}}</p>
-        <p>{{item.description}}</p>
+      <div class="btn">
+        <button mat-raised-button (click)="openDialog()">Create task</button>
       </div>
-    </div>
-  </div>
-  <div class="example-container">
-    <h2>In progress</h2>
-    <div
-      cdkDropList
-      #inProgressList="cdkDropList"
-      [cdkDropListData]="inprogress"
-      [cdkDropListConnectedTo]="[todoList,doneList]"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of inprogress" cdkDrag>
-        <p>{{item?.title}}</p>
-        <p>{{item?.description}}</p>
-      </div>
-    </div>
-  </div>
 
-  <div class="example-container">
-    <h2>Done</h2>
+    <div class="task-container">
+          <div class="example-container">
+            <div>
+              <h2>To do</h2>
+            </div>
+            <div
+              cdkDropList
+              #todoList="cdkDropList"
+              [cdkDropListData]="todo"
+              [cdkDropListConnectedTo]="[inProgressList]"
+              class="example-list"
+              (cdkDropListDropped)="drop($event)">
+              <div class="example-box" *ngFor="let item of todo" cdkDrag>
+                <p class="title-text" >{{item?.title}}</p>
+                <p>{{item?.description}}</p>
+              </div>
+            </div>
+          </div>
+          <div class="example-container">
+            <div>
+              <h2>In progress</h2>
+            </div>
+            <div
+              cdkDropList
+              #inProgressList="cdkDropList"
+              [cdkDropListData]="inprogress"
+              [cdkDropListConnectedTo]="[todoList,doneList]"
+              class="example-list"
+              (cdkDropListDropped)="drop($event)">
+              <div class="example-box" *ngFor="let item of inprogress" cdkDrag>
+                <p class="title-text">{{item?.title}}</p>
+                <p>{{item?.description}}</p>
+              </div>
+            </div>
+          </div>
 
-    <div
-      cdkDropList
-      #doneList="cdkDropList"
-      [cdkDropListData]="done"
-      [cdkDropListConnectedTo]="[inProgressList]"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of done" cdkDrag>
-        <p>{{item?.title}}</p>
-        <p>{{item?.description}}</p>
-      </div>
+          <div class="example-container">
+            <div>
+              <h2>Done</h2>
+            </div>
+            <div
+              cdkDropList
+              #doneList="cdkDropList"
+              [cdkDropListData]="done"
+              [cdkDropListConnectedTo]="[inProgressList]"
+              class="example-list"
+              (cdkDropListDropped)="drop($event)">
+              <div class="example-box" *ngFor="let item of done" cdkDrag>
+                <p class="title-text">{{item?.title}}</p>
+                <p>{{item?.description}}</p>
+              </div>
+            </div>
+          </div>
+
     </div>
-  </div>
-
-</div>
 
 </div>
